--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "term.js",
+  "name": "term.js-cockpit",
   "description": "A terminal written in javascript",
   "author": "Christopher Jeffrey",
   "version": "0.0.7",
