--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "term.js-cockpit",
-  "description": "A terminal written in javascript",
+  "description": "Cockpit's fork of the term.js project",
   "author": "Christopher Jeffrey",
   "version": "0.0.7",
   "license": "MIT",
   "main": "./index.js",
   "preferGlobal": false,
-  "repository": "git://github.com/chjj/term.js.git",
-  "homepage": "https://github.com/chjj/term.js",
-  "bugs": { "url": "https://github.com/chjj/term.js/issues" },
+  "repository": "git://github.com/cockpit-project/term.js.git",
+  "homepage": "https://github.com/cockpit-project/term.js",
+  "bugs": { "url": "https://github.com/cockpit-project/term.js/issues" },
   "keywords": ["tty", "terminal", "term", "xterm"],
   "tags": ["tty", "terminal", "term", "xterm"],
   "engines": { "node": ">= 0.8.0" },
